--- a/templates/foo/show.mustache
+++ b/templates/foo/show.mustache
@@ -7,7 +7,7 @@
 <table>
   {{#instance}}
     <tr>
-      <td>name</td>
+      <td>Name:</td>
       <td>{{ name }}</td>
     </tr>
   {{/instance}}
