--- a/templates/foo/form.mustache
+++ b/templates/foo/form.mustache
@@ -5,7 +5,7 @@
 
 <form>
   {{#instance}}
-    <label for='name'>name</label>
+    <label for='name'>Name:</label>
     <input type='text' name='name' value='{{ name }}'><br>
   {{/instance}}
 
