--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -7,7 +7,7 @@
 
   <script src='/js/http.js'></script>
   
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/vendor/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
