Extract Rack CRUD gem

--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -3,9 +3,9 @@
 <head>
   <meta charset='UTF-8'>
   <title>Rack CRUD Demo</title>
-  <script src="/js/vendor/jquery-2.1.3.min.js"></script>
+  <script src="/rack_crud/js/vendor/jquery-2.1.3.min.js"></script>
 
-  <script src='/js/http.js'></script>
+  <script src='/rack_crud/js/http.js'></script>
   
   <link href="/css/vendor/bootstrap.min.css" rel="stylesheet">
 </head>
